objects/Colleages__c.object
<CustomObject>
    <label>Colleages</label>
    <nameField>
        <label>Colleage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colleages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Colleage_Code__c</fullName>
        <label>Colleage Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colleage_Images__c</fullName>
        <label>Colleage Images</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Colleage_Address__c</fullName>
        <label>Colleage Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Correspondant_Name__c</fullName>
        <label>Correspondant Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Establishment_Date__c</fullName>
        <label>Establishment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Colleage_Phone_Number__c</fullName>
        <description>This field is created to store colleage Phone</description>
        <inlineHelpText>Phone number can start with any number not text</inlineHelpText>
        <label>Colleage Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Colleage_Registration_Fee__c</fullName>
        <label>Colleage Registration Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Does_it_have_Govt_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does it have Govt Authorization</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>